<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tatapp</string>
    <string name="welcome">Welcome to Tatapp!!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dispatch">DispatchActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="id">ID</string>
    <string name="Username_prompt">username</string>
    <string name="Email_prompt">e-mail</string>
    <string name="password_prompt">password</string>
    <string name="RetypePassword_prompt">retype password</string>
    <string name="Signup">SIGN UP</string>
    <string name="Login">LOG IN</string>

</resources>
